--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
     <nav>
         <div class="logo">UX Prompter</div>
+        <!-- Removed About link div -->
+        <!--
         <div>
             <a href="#">About</a>
         </div>
+        -->
     </nav>
 
     <main class="container">
